--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>ClienteServlet</servlet-name>
         <servlet-class>com.controlador.ClienteServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MaqServlet</servlet-name>
+        <servlet-class>com.controlador.MaqServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>ClienteServlet</servlet-name>
         <url-pattern>/ClienteServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MaqServlet</servlet-name>
+        <url-pattern>/MaqServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
