--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>MaqServlet</servlet-name>
         <servlet-class>com.controlador.MaqServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DMServlet</servlet-name>
+        <servlet-class>com.controlador.DMServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>MaqServlet</servlet-name>
         <url-pattern>/MaqServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DMServlet</servlet-name>
+        <url-pattern>/DMServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
