--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,6 +20,14 @@
         <servlet-name>UsuarioServlet</servlet-name>
         <servlet-class>com.controlador.UsuarioServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>EmpleadoServlet</servlet-name>
+        <servlet-class>com.controlador.EmpleadoServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DEServlet</servlet-name>
+        <servlet-class>com.controlador.DEServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -39,6 +47,14 @@
     <servlet-mapping>
         <servlet-name>UsuarioServlet</servlet-name>
         <url-pattern>/UsuarioServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EmpleadoServlet</servlet-name>
+        <url-pattern>/EmpleadoServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DEServlet</servlet-name>
+        <url-pattern>/DEServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
