--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>UsuarioServlet</servlet-name>
         <servlet-class>com.controlador.UsuarioServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MunServlet</servlet-name>
+        <servlet-class>com.controlador.MunServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -39,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>UsuarioServlet</servlet-name>
         <url-pattern>/UsuarioServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MunServlet</servlet-name>
+        <url-pattern>/MunServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
