--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>MunServlet</servlet-name>
         <servlet-class>com.controlador.MunServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DeptoServlet</servlet-name>
+        <servlet-class>com.controlador.DeptoServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -63,6 +67,10 @@
     <servlet-mapping>
         <servlet-name>MunServlet</servlet-name>
         <url-pattern>/MunServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeptoServlet</servlet-name>
+        <url-pattern>/DeptoServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
