--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -36,6 +36,10 @@
         <servlet-name>DeptoServlet</servlet-name>
         <servlet-class>com.controlador.DeptoServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ProyectoServlet</servlet-name>
+        <servlet-class>com.controlador.ProyectoServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -71,6 +75,10 @@
     <servlet-mapping>
         <servlet-name>DeptoServlet</servlet-name>
         <url-pattern>/DeptoServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProyectoServlet</servlet-name>
+        <url-pattern>/ProyectoServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
