--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -40,6 +40,10 @@
         <servlet-name>ProyectoServlet</servlet-name>
         <servlet-class>com.controlador.ProyectoServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CancelServlet</servlet-name>
+        <servlet-class>com.controlador.CancelServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -79,6 +83,10 @@
     <servlet-mapping>
         <servlet-name>ProyectoServlet</servlet-name>
         <url-pattern>/ProyectoServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CancelServlet</servlet-name>
+        <url-pattern>/CancelServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
